# solana-ebpf-profiler

./: Cargo.toml  LICENSE-MIT  Makefile  README.md  programs.json
profiler/: Cargo.toml
profiler-common/: Cargo.toml
profiler-common/src/: lib.rs
profiler-ebpf/: Cargo.toml  build.rs
profiler-ebpf/src/: main.rs
profiler/src/: dashboard.rs  demo.rs  main.rs  programs.rs  symbols.rs  unwind.rs
scripts/: load-test.sh  profile-validator.sh
